--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,8 +1,5 @@
 /* Google Css */
 
-// Variables
-$nav-height: 50px;
-
 html,
 body,
 div,
@@ -13,15 +10,28 @@ ul {
 	padding: 0;
 }
 
-
-html,
-body {
-	height: 100%;
-}
-
 body {
 	background: #FFFFFF;
 	font-family: arial;
+	overflow: hidden;
+}
+
+.site {
+	display: flex;
+	min-height: 100vh;
+	flex-direction: column;
+}
+
+.site-content {
+	align-items: center;
+	display: flex;
+	flex: 1;
+	justify-content: center;
+}
+
+.vertical-center {
+	margin-bottom: 30%;
+	width: 100%;
 }
 
 .logo {
@@ -47,13 +57,6 @@ body {
 	&:hover	{
 		border-color: #4683EA;
 	}
-}
-
-
-.wrap {
-	position: relative;
-	top: 30%;
-	transform: translateY(-30%);
 }
 
 .btn-wrap {
@@ -96,34 +99,74 @@ body {
 /* [Nav Styles] */
 
 nav {
-	background: transparent;
-	height: $nav-height;
-	white-space: nowrap;
+	height: 50px;
+}
+
+footer {
+	height: 45px;
+
+	li {
+		line-height: 45px;
+	}
 
 	a {
-		color: #222222;
-		font-size: .8em;
-		font-weight: normal;
-		text-decoration: none;
-		transition: .2s;
-
+		color: #666666;
 
 		&:hover {
-			color: #000000;
-			text-decoration: underline;
+			color: #666666;
+		}
+	}
+}
+
+a {
+	color: #222222;
+	font-size: .8em;
+	font-weight: normal;
+	text-decoration: none;
+	transition: .2s;
+
+	&:hover {
+		color: #000000;
+		text-decoration: underline;
+	}
+}
+
+ul {
+	display: inline; // Needed for the footer
+	list-style: none;
+	margin-right: 30px;
+}
+
+.right {
+	float: right;
+}
+
+li {
+	display: inline;
+	line-height: 50px; // Set to same height as container for vertical centering
+	margin-left: 20px;
+}
+
+@media only screen and (max-width: 30em) {
+	footer {
+		height: 75px;
+
+		ul {
+			display: block;
+			text-align: center;
+		}
+
+		li {
+			line-height: 2;
+		}
+
+		.right {
+			float: none;
 		}
 	}
 
-	ul {
-		float: right;
-		list-style: none;
-		margin-right: 30px;
-	}
-
-	li {
-		display: inline;
-		line-height: $nav-height;
-		margin-left: 15px;
+	.vertical-center {
+		margin-bottom: 20%;
 	}
 }
 
