--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -37,6 +37,7 @@ body {
 .logo {
 	height: auto;
 	left: 50%;
+	margin-bottom: 10px;
 	position: relative;
 	transform: translateX(-50%);
 	width: 300px;
