--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -82,21 +82,6 @@ body {
 	}
 }
 
-.sign-in {
-	background: #4683EA;
-	border-color: #4683EA;
-	color: #FFFFFF;
-	font-weight: bold;
-	padding: 2px 10px 2px 10px;
-
-	&:hover {
-		border-color: #4683EA;
-		color: #DDDDDD;
-		cursor: pointer;
-		text-decoration: none;
-	}
-}
-
 /* [Nav Styles] */
 
 nav {
@@ -124,11 +109,11 @@ a {
 	font-size: .8em;
 	font-weight: normal;
 	text-decoration: none;
-	transition: .2s;
+	transition: .5s;
 
 	&:hover {
+		border-bottom: 1px solid;
 		color: #000000;
-		text-decoration: underline;
 	}
 }
 
