--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -22,6 +22,7 @@ body {
 .site {
 	display: flex;
 	flex-direction: column;
+	height: 100vh;
 	min-height: 100vh;
 }
 
@@ -45,8 +46,7 @@ body {
 }
 
 .search {
-	border-color: #DDDDDD;
-	border: 1px solid;;
+	border: 1px solid #DDDDDD;;
 	display: block;
 	height: 26px;
 	margin: 0 auto 15px auto;
